# circuit-dynamics-pipeline

./: .gitignore  README.md  pyproject.toml  test_import.py
.github/workflows/: ci.yml
configs/: reference_dynamics.yaml
examples/: README.md
notebooks/: circuit_model_notebook.ipynb
reference/: reference_dynamics.npz  reference_dynamics_old.npz
scripts/: make_reference_dynamics.py  run_grid_with_manifest.py  test_plot_grid.py
src/circuit_pipeline/: cli.py
src/circuit_pipeline/legacy/: extended_circuit.py
src/circuit_pipeline/model/: linear_compare.py  linear_response.py
src/circuit_pipeline/pipeline/: __init__.py  artifacts.py  run_grid.py
src/circuit_pipeline/plotting/: _backend.py  dynamics_plots.py  heatmaps.py  rates_grid.py  styles.py  sweeps.py
src/circuit_pipeline/simulation/: dynamics.py  sweeps.py
tests/: conftest.py  test_grid_resume.py  test_linear_compare.py  test_plot_saves.py  test_reference_grid.py
